● feat: 完成缠论实验室原型 - 图表、交易管理、引擎配置及模块联动
  ## 新增功能

  ### 1. K线图表与缠论可视化
  - 使用 ECharts 实现完整的 K线图表组件 (ChanChart.vue)
  - 支持缠论标注：分型、笔、线段、中枢、买卖点
  - 图表分析页面 (ChartAnalysis.vue)，支持标的和周期切换
  - 成交量柱状图、缩放拖拽、响应式 Tooltip

  ### 2. 自动交易管理
  - 重构 AutoTrade 页面，添加标签页结构（持仓/委托/成交/资金）
  - 实现 4 个交易组件：
    - PositionList: 持仓列表，支持平仓操作
    - OrderList: 委托列表，支持撤单操作
    - TradeList: 成交历史记录
    - AccountSummary: 资金概览 + 资金曲线图
  - 账户 KPI 卡片：总权益、可用余额、未实现盈亏、保证金水平

  ### 3. 缠论引擎优化
  - 重构 Engine 页面，添加计算结果展示
  - 统计概览：分型/笔/线段/中枢总数
  - 当前结构：当前笔/线段/中枢详情卡片
  - 最近买卖点列表，显示置信度和原因

  ### 4. 模块间联动
  - Watchlist → Chart: 点击标的跳转到图表页面
  - Markets → Chart: 点击标的跳转到图表页面
  - Chart 页面支持 URL 参数 (query.symbol)，自动切换标的
  - 表格行和卡片添加悬停效果和点击跳转
  - 复选框使用 @click.stop 防止触发跳转

  ## Mock 数据
  - chartData.js: K线数据 + 缠论标注（120根K线，4个标的）
  - tradeData.js: 交易数据（持仓/委托/成交/资金/资金曲线）
  - engineData.js: 引擎计算结果（笔/线段/中枢/买卖点/统计）

  ## 国际化
  - 添加 chart.* 翻译（15个键）
  - 添加 autoTrade.* 翻译（60个键）
  - 添加 engine.* 翻译（40个键）
  - 中英文双语支持

  ## 技术细节
  - 使用 vue-router 实现页面跳转和参数传递
  - 使用 ECharts 6.0 + vue-echarts 8.0
  - 响应式设计，支持桌面/平板/移动端
  - 虚拟滚动优化大数据列表性能

  ## 文件变更
  新增:
  - frontend/src/components/Chart/ChanChart.vue
  - frontend/src/components/trade/PositionList.vue
  - frontend/src/components/trade/OrderList.vue
  - frontend/src/components/trade/TradeList.vue
  - frontend/src/components/trade/AccountSummary.vue
  - frontend/src/mock/chartData.js
  - frontend/src/mock/tradeData.js
  - frontend/src/mock/engineData.js
  - frontend/src/views/ChartAnalysis.vue

  修改:
  - frontend/src/views/AutoTrade.vue (完全重写)
  - frontend/src/views/Engine.vue (完全重写)
  - frontend/src/views/Watchlist.vue (添加跳转功能)
  - frontend/src/views/Markets.vue (添加跳转功能)
  - frontend/src/router/index.js (添加 /chart 路由)
  - frontend/src/components/ChanShell.vue (添加图表导航)
  - frontend/src/i18n/locales/zh-CN.json
  - frontend/src/i18n/locales/en-US.json
  - frontend/package.json (添加 echarts 依赖)

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -15,18 +15,37 @@
     "add": "Add",
     "close": "Close",
     "empty": "No data",
-    "all": "All"
+    "all": "All",
+    "high": "High",
+    "medium": "Medium",
+    "low": "Low",
+    "confidence": "Confidence",
+    "validity": "Validity",
+    "level": "Level",
+    "new": "New",
+    "run": "Run"
   },
   "nav": {
-    "home": "Home",
+    "home": "Overview",
     "markets": "Markets",
     "watchlist": "Watchlist",
+    "chart": "Chart Analysis",
     "signals": "Signals",
-    "strategy": "Strategy",
+    "strategy": "Strategy Lab",
     "backtest": "Backtest",
     "autoTrade": "Auto Trade",
-    "engine": "Engine",
+    "engine": "Chan Engine",
     "settings": "Settings"
+  },
+  "shell": {
+    "openMenu": "Open menu",
+    "moreOptions": "More options",
+    "symbol": "Symbol",
+    "interval": "Interval",
+    "model": "Model",
+    "newAlert": "New alert",
+    "dataSource": "Data source",
+    "sync": "Sync"
   },
   "markets": {
     "title": "Markets",
@@ -68,24 +87,190 @@
     "signal": "Signal",
     "bias": "Bias",
     "emptyText": "No watchlist items",
+    "items": "items",
     "mainstream": "Mainstream",
+    "mainstreamDesc": "BTC, ETH, SOL...",
     "futures": "Futures",
+    "futuresDesc": "Perpetual/USDT Margined",
     "watch": "Watch",
+    "watchDesc": "Not trading yet",
     "spot": "Spot",
     "perpetual": "Perpetual"
   },
   "signals": {
+    "title": "Signals",
+    "subtitle": "Filter by direction / level / asset.",
+    "searchPlaceholder": "Search asset or signal type",
+    "direction": "Direction",
     "buy": "Buy",
     "sell": "Sell",
     "wait": "Wait",
     "strong": "Strong",
-    "weak": "Weak"
+    "weak": "Weak",
+    "emptyTitle": "No Signals",
+    "emptyDesc": "No signals match the current filters"
+  },
+  "strategy": {
+    "title": "Strategy Lab",
+    "subtitle": "Templates and backtest entry.",
+    "newTemplate": "New Template",
+    "runBacktest": "Run Backtest",
+    "templates": "Strategy Templates",
+    "emptyTitle": "No Strategy Templates",
+    "emptyDesc": "Create your first strategy template to start backtesting",
+    "winRate": "Win Rate",
+    "rating": "Rating",
+    "edit": "Edit",
+    "backtest": "Backtest"
+  },
+  "backtest": {
+    "title": "Backtest",
+    "subtitle": "Tasks and results overview.",
+    "newBacktest": "New Backtest",
+    "emptyTitle": "No Backtest Tasks",
+    "emptyDesc": "Click the button above to create a new backtest task",
+    "range": "Range",
+    "pnl": "PnL",
+    "drawdown": "Drawdown",
+    "progress": "Progress",
+    "done": "Done",
+    "running": "Running",
+    "queued": "Queued",
+    "failed": "Failed"
+  },
+  "chart": {
+    "title": "Chart Analysis",
+    "subtitle": "K-line chart with Chan Theory annotations",
+    "interval": "Interval",
+    "fenxing": "Fractal",
+    "bi": "Stroke",
+    "xianduan": "Segment",
+    "zhongshu": "Hub",
+    "tradingPoints": "Trading Points",
+    "loading": "Loading...",
+    "fenxingCount": "Fractals",
+    "biCount": "Strokes",
+    "xianduanCount": "Segments",
+    "zhongshuCount": "Hubs",
+    "tradingPointsCount": "Trading Points"
+  },
+  "autoTrade": {
+    "title": "Auto Trade",
+    "subtitle": "Channel status and risk control",
+    "start": "Start",
+    "stopAll": "Stop All",
+    "totalEquity": "Total Equity",
+    "availableBalance": "Available Balance",
+    "usedMargin": "Used Margin",
+    "unrealizedPnl": "Unrealized PnL",
+    "marginLevel": "Margin Level",
+    "positions": "Positions",
+    "openOrders": "Open Orders",
+    "todayPnl": "Today PnL",
+    "todayPnlPercent": "Today Return",
+    "totalPnl": "Total PnL",
+    "orders": "Orders",
+    "trades": "Trades",
+    "account": "Account",
+    "symbol": "Symbol",
+    "side": "Side",
+    "long": "Long",
+    "short": "Short",
+    "buy": "Buy",
+    "sell": "Sell",
+    "size": "Size",
+    "entryPrice": "Entry Price",
+    "currentPrice": "Current Price",
+    "pnl": "PnL",
+    "margin": "Margin",
+    "openTime": "Open Time",
+    "actions": "Actions",
+    "close": "Close",
+    "type": "Type",
+    "limit": "Limit",
+    "market": "Market",
+    "stop": "Stop",
+    "price": "Price",
+    "filled": "Filled",
+    "status": "Status",
+    "open": "Open",
+    "pending": "Pending",
+    "cancelled": "Cancelled",
+    "createTime": "Create Time",
+    "cancel": "Cancel",
+    "total": "Total",
+    "fee": "Fee",
+    "time": "Time",
+    "equityCurve": "Equity Curve",
+    "todayStats": "Today Stats",
+    "accountInfo": "Account Info",
+    "available": "Available",
+    "used": "Used",
+    "safe": "Safe",
+    "warning": "Warning",
+    "noPositions": "No Positions",
+    "noPositionsDesc": "No open positions",
+    "noOrders": "No Orders",
+    "noOrdersDesc": "No open orders",
+    "noTrades": "No Trades",
+    "noTradesDesc": "No trade history"
+  },
+  "engine": {
+    "title": "Chan Engine",
+    "subtitle": "Rule parameters and level sync",
+    "reset": "Reset",
+    "save": "Save Parameters",
+    "saving": "Saving...",
+    "parameters": "Core Parameters",
+    "parametersDesc": "Adjust Chan Theory calculation rules",
+    "mergeRelation": "Merge Relation",
+    "minFenxingK": "Min K for Fractal",
+    "minXianduanBi": "Min Strokes for Segment",
+    "results": "Calculation Results",
+    "resultsDesc": "Current Chan Theory structure and statistics",
+    "totalFenxing": "Total Fractals",
+    "top": "Top",
+    "bottom": "Bottom",
+    "totalBi": "Total Strokes",
+    "up": "Up",
+    "down": "Down",
+    "totalXianduan": "Total Segments",
+    "totalZhongshu": "Total Hubs",
+    "tradingPoints": "Trading Points",
+    "currentBi": "Current Stroke",
+    "currentXianduan": "Current Segment",
+    "currentZhongshu": "Current Hub",
+    "range": "Range",
+    "klineCount": "K-lines",
+    "biCount": "Strokes",
+    "strength": "Strength",
+    "strong": "Strong",
+    "medium": "Medium",
+    "weak": "Weak",
+    "center": "Center",
+    "oscillations": "Oscillations",
+    "recentTradingPoints": "Recent Trading Points",
+    "high": "High",
+    "low": "Low",
+    "info": "Info",
+    "infoTitle": "Parameter Rules",
+    "infoDesc": "Parameters will be applied immediately to real-time calculations and historical playback after saving. Modifying merge relation parameters may affect existing stroke and segment divisions."
   },
   "settings": {
     "title": "Settings",
+    "subtitle": "Preferences, risk control, account binding.",
+    "saveSettings": "Save Settings",
     "language": "Language",
     "theme": "Theme",
-    "darkMode": "Dark Mode",
-    "lightMode": "Light Mode"
+    "darkMode": "Dark",
+    "lightMode": "Light",
+    "riskControl": "Risk Control",
+    "drawdownLimit": "Drawdown Limit",
+    "autoReduceWeight": "Auto reduce weight on limit breach",
+    "accountBinding": "Account Binding",
+    "connected": "Connected",
+    "notifications": "Notifications",
+    "email": "Email",
+    "webhook": "Webhook"
   }
 }
