--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -15,18 +15,37 @@
     "add": "新增",
     "close": "关闭",
     "empty": "暂无数据",
-    "all": "全部"
+    "all": "全部",
+    "high": "高",
+    "medium": "中",
+    "low": "低",
+    "confidence": "置信度",
+    "validity": "有效期",
+    "level": "级别",
+    "new": "新建",
+    "run": "运行"
   },
   "nav": {
-    "home": "首页",
+    "home": "总览",
     "markets": "市场",
     "watchlist": "自选池",
+    "chart": "图表分析",
     "signals": "信号",
-    "strategy": "策略",
+    "strategy": "策略实验室",
     "backtest": "回测",
     "autoTrade": "自动交易",
-    "engine": "引擎",
+    "engine": "缠论引擎",
     "settings": "设置"
+  },
+  "shell": {
+    "openMenu": "打开菜单",
+    "moreOptions": "更多选项",
+    "symbol": "标的",
+    "interval": "周期",
+    "model": "模型",
+    "newAlert": "新建预警",
+    "dataSource": "数据源",
+    "sync": "同步"
   },
   "markets": {
     "title": "市场",
@@ -68,24 +87,190 @@
     "signal": "信号",
     "bias": "偏向",
     "emptyText": "暂无自选标的",
+    "items": "标的",
     "mainstream": "主流",
+    "mainstreamDesc": "BTC, ETH, SOL...",
     "futures": "合约",
+    "futuresDesc": "永续/USDT 本位",
     "watch": "观察",
+    "watchDesc": "暂不交易",
     "spot": "现货",
     "perpetual": "永续"
   },
   "signals": {
+    "title": "信号",
+    "subtitle": "筛选方向 / 级别 / 标的。",
+    "searchPlaceholder": "搜索标的或信号类型",
+    "direction": "方向",
     "buy": "买",
     "sell": "卖",
     "wait": "观望",
     "strong": "强",
-    "weak": "弱"
+    "weak": "弱",
+    "emptyTitle": "暂无信号",
+    "emptyDesc": "当前筛选条件下没有匹配的信号"
+  },
+  "strategy": {
+    "title": "策略实验室",
+    "subtitle": "模板与回测入口。",
+    "newTemplate": "新建模板",
+    "runBacktest": "运行回测",
+    "templates": "策略模板",
+    "emptyTitle": "暂无策略模板",
+    "emptyDesc": "创建您的第一个策略模板开始回测",
+    "winRate": "胜率",
+    "rating": "评级",
+    "edit": "编辑",
+    "backtest": "回测"
+  },
+  "backtest": {
+    "title": "回测",
+    "subtitle": "任务与结果概览。",
+    "newBacktest": "新建回测",
+    "emptyTitle": "暂无回测任务",
+    "emptyDesc": "点击上方按钮创建新的回测任务",
+    "range": "区间",
+    "pnl": "收益",
+    "drawdown": "回撤",
+    "progress": "进度",
+    "done": "完成",
+    "running": "运行中",
+    "queued": "排队",
+    "failed": "失败"
+  },
+  "chart": {
+    "title": "图表分析",
+    "subtitle": "K线图表与缠论标注可视化",
+    "interval": "周期",
+    "fenxing": "分型",
+    "bi": "笔",
+    "xianduan": "线段",
+    "zhongshu": "中枢",
+    "tradingPoints": "买卖点",
+    "loading": "加载中...",
+    "fenxingCount": "分型数量",
+    "biCount": "笔数量",
+    "xianduanCount": "线段数量",
+    "zhongshuCount": "中枢数量",
+    "tradingPointsCount": "买卖点数量"
+  },
+  "autoTrade": {
+    "title": "自动交易",
+    "subtitle": "通道状态与风控",
+    "start": "启动",
+    "stopAll": "全部停止",
+    "totalEquity": "总权益",
+    "availableBalance": "可用余额",
+    "usedMargin": "已用保证金",
+    "unrealizedPnl": "未实现盈亏",
+    "marginLevel": "保证金水平",
+    "positions": "持仓",
+    "openOrders": "委托",
+    "todayPnl": "今日盈亏",
+    "todayPnlPercent": "今日收益率",
+    "totalPnl": "累计盈亏",
+    "orders": "委托",
+    "trades": "成交",
+    "account": "资金",
+    "symbol": "标的",
+    "side": "方向",
+    "long": "多",
+    "short": "空",
+    "buy": "买入",
+    "sell": "卖出",
+    "size": "数量",
+    "entryPrice": "开仓价",
+    "currentPrice": "当前价",
+    "pnl": "盈亏",
+    "margin": "保证金",
+    "openTime": "开仓时间",
+    "actions": "操作",
+    "close": "平仓",
+    "type": "类型",
+    "limit": "限价",
+    "market": "市价",
+    "stop": "止损",
+    "price": "价格",
+    "filled": "已成交",
+    "status": "状态",
+    "open": "挂单中",
+    "pending": "等待中",
+    "cancelled": "已取消",
+    "createTime": "创建时间",
+    "cancel": "撤单",
+    "total": "总额",
+    "fee": "手续费",
+    "time": "时间",
+    "equityCurve": "资金曲线",
+    "todayStats": "今日统计",
+    "accountInfo": "账户信息",
+    "available": "可用",
+    "used": "已用",
+    "safe": "安全",
+    "warning": "警告",
+    "noPositions": "暂无持仓",
+    "noPositionsDesc": "当前没有持仓",
+    "noOrders": "暂无委托",
+    "noOrdersDesc": "当前没有挂单",
+    "noTrades": "暂无成交",
+    "noTradesDesc": "当前没有成交记录"
+  },
+  "engine": {
+    "title": "缠论引擎",
+    "subtitle": "规则参数与级别同步",
+    "reset": "重置",
+    "save": "保存参数",
+    "saving": "保存中...",
+    "parameters": "核心参数",
+    "parametersDesc": "调整缠论计算规则",
+    "mergeRelation": "包含关系",
+    "minFenxingK": "分型最少K数",
+    "minXianduanBi": "线段最少笔数",
+    "results": "计算结果",
+    "resultsDesc": "当前缠论结构与统计",
+    "totalFenxing": "分型总数",
+    "top": "顶",
+    "bottom": "底",
+    "totalBi": "笔总数",
+    "up": "上",
+    "down": "下",
+    "totalXianduan": "线段总数",
+    "totalZhongshu": "中枢总数",
+    "tradingPoints": "买卖点",
+    "currentBi": "当前笔",
+    "currentXianduan": "当前线段",
+    "currentZhongshu": "当前中枢",
+    "range": "区间",
+    "klineCount": "K线数",
+    "biCount": "笔数",
+    "strength": "强度",
+    "strong": "强",
+    "medium": "中",
+    "weak": "弱",
+    "center": "中轴",
+    "oscillations": "震荡次数",
+    "recentTradingPoints": "最近买卖点",
+    "high": "高",
+    "low": "低",
+    "info": "说明",
+    "infoTitle": "参数生效规则",
+    "infoDesc": "参数保存后将立即应用于实时计算与历史回放。修改包含关系参数可能影响已有的笔段划分结果。"
   },
   "settings": {
     "title": "设置",
+    "subtitle": "偏好、风控、账户绑定。",
+    "saveSettings": "保存设置",
     "language": "语言",
     "theme": "主题",
-    "darkMode": "暗色模式",
-    "lightMode": "浅色模式"
+    "darkMode": "暗色",
+    "lightMode": "浅色",
+    "riskControl": "风控",
+    "drawdownLimit": "单标的回撤",
+    "autoReduceWeight": "超限自动降权",
+    "accountBinding": "账户绑定",
+    "connected": "已连接",
+    "notifications": "通知方式",
+    "email": "邮件",
+    "webhook": "Webhook"
   }
 }
