● fix: 修复国际化问题 - Home 组件硬编码和日期格式
  ## 问题
  1. chartData.js 硬编码 'zh-CN' 导致英文界面显示中文时间
  2. Home 相关组件（HomeMain/HomeRight/HomeBottom）大量硬编码中文

  ## 修复内容

  ### 1. chartData.js 日期格式
  - 将 toLocaleString('zh-CN') 改为 toLocaleString(undefined)
  - 自动使用浏览器语言设置，支持多语言环境

  ### 2. HomeRight.vue 国际化
  - 信号监控、风险与持仓、交易日历标题和描述
  - 仓位、最大回撤、持仓数量等标签
  - 维护窗口、合约资金费、下次扫描等会话信息
  - 中枢突破、弱背驰、线段衰竭等信号描述

  ### 3. HomeMain.vue 国际化
  - 结构叠加、多级别快照标题和描述
  - 叠加开启、自动缩放、锁定联动等按钮
  - 价格、线段、中枢、卖点等图例
  - 结构更新时间、最新确认笔、线段斜率等指标
  - 突破力度、背驰指数、中枢同步等统计
  - 笔、线段、中枢计数和趋势描述
  - 自选池表格的列标题和信号标签

  ### 4. HomeBottom.vue 国际化
  - 策略实验室标题和描述
  - 保存模板、运行回测按钮
  - 参数调优标题
  - 最小成笔K数、中枢重叠度、背驰阈值等参数标签

  ### 5. 国际化翻译
  添加 60+ 个新翻译键到 home.* 命名空间：
  - structureOverlay, multiLevelSnapshot, signalMonitoring
  - riskAndPosition, tradingCalendar, strategyLab
  - breakoutStrength, divergenceIndex, hubSync
  - biCount, segmentCount, hubCount
  - trendUp, trendDown, trendConsolidation
  - 等等...

  ## 技术细节
  - 使用 t() 函数替换所有硬编码文本
  - 使用 computed() 处理动态翻译内容
  - 使用 labelKey/noteKey 模式存储翻译键
  - 日期格式使用 undefined 自动检测语言

  ## 影响范围
  - Home 页面所有子组件
  - K线数据生成的日期格式
  - 中英文双语完全支持

  ## 文件变更
  修改:
  - frontend/src/mock/chartData.js
  - frontend/src/views/home/HomeRight.vue
  - frontend/src/views/home/HomeMain.vue
  - frontend/src/views/home/HomeBottom.vue
  - frontend/src/i18n/locales/zh-CN.json
  - frontend/src/i18n/locales/en-US.json

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -256,6 +256,66 @@
     "infoTitle": "Parameter Rules",
     "infoDesc": "Parameters will be applied immediately to real-time calculations and historical playback after saving. Modifying merge relation parameters may affect existing stroke and segment divisions."
   },
+  "home": {
+    "structureOverlay": "Structure Overlay",
+    "structureOverlayDesc": "Strokes, segments, hubs, divergence mapping",
+    "overlayOn": "Overlay: On",
+    "autoZoom": "Auto Zoom",
+    "price": "Price",
+    "segment": "Segment",
+    "hub": "Hub",
+    "sellPoint": "Sell Point",
+    "structureUpdateTime": "Structure Update Time",
+    "latestConfirmedBi": "Latest Confirmed Stroke",
+    "segmentSlope": "Segment Slope",
+    "hubOverlap": "Hub Overlap",
+    "multiLevelSnapshot": "Multi-Level Snapshot",
+    "multiLevelDesc": "1m / 5m / 15m multi-period sync",
+    "lockSync": "Lock Sync",
+    "consensus": "Consensus: Buyer zone forming (weak)",
+    "watchlistTitle": "Watchlist",
+    "watchlistDesc": "Auto-scan Chan Theory signals",
+    "edit": "Edit",
+    "pair": "Pair",
+    "lastPrice": "Last Price",
+    "signal": "Signal",
+    "bias": "Bias",
+    "breakoutStrength": "Breakout Strength",
+    "breakoutNote": "Segment 3 vs 1",
+    "divergenceIndex": "Divergence Index",
+    "divergenceNote": "Momentum weakening",
+    "hubSync": "Hub Sync",
+    "hubSyncNote": "Multi-level aligned",
+    "biCount": "Strokes",
+    "segmentCount": "Segments",
+    "hubCount": "Hubs",
+    "trendUp": "Trend Up",
+    "trendDown": "Trend Down",
+    "trendConsolidation": "Trend Consolidation",
+    "signalMonitoring": "Signal Monitoring",
+    "signalMonitoringDesc": "Real-time queue and confidence",
+    "riskAndPosition": "Risk & Position",
+    "riskAndPositionDesc": "Auto-trade risk control",
+    "position": "Position",
+    "maxDrawdown": "Max Drawdown",
+    "holdingCount": "Holdings",
+    "tradingCalendar": "Trading Calendar",
+    "tradingCalendarDesc": "Binance 24/7 | Maintenance alerts",
+    "maintenanceWindow": "Maintenance Window",
+    "fundingRate": "Funding Rate",
+    "nextScan": "Next Scan",
+    "strategyLab": "Strategy Lab",
+    "strategyLabDesc": "Hierarchical parameterized Chan rules",
+    "saveTemplate": "Save Template",
+    "runBacktest": "Run Backtest",
+    "parameterTuning": "Parameter Tuning",
+    "minBiK": "Min K for Stroke",
+    "hubOverlapThreshold": "Hub Overlap Threshold",
+    "divergenceThreshold": "Divergence Threshold",
+    "hubBreakout": "Hub breakout",
+    "weakDivergence": "Weak divergence",
+    "segmentExhaustion": "Segment exhaustion"
+  },
   "settings": {
     "title": "Settings",
     "subtitle": "Preferences, risk control, account binding.",
