--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -256,6 +256,66 @@
     "infoTitle": "参数生效规则",
     "infoDesc": "参数保存后将立即应用于实时计算与历史回放。修改包含关系参数可能影响已有的笔段划分结果。"
   },
+  "home": {
+    "structureOverlay": "结构叠加",
+    "structureOverlayDesc": "笔、线段、中枢、背驰映射",
+    "overlayOn": "叠加：开启",
+    "autoZoom": "自动缩放",
+    "price": "价格",
+    "segment": "线段",
+    "hub": "中枢",
+    "sellPoint": "卖点",
+    "structureUpdateTime": "结构更新时间",
+    "latestConfirmedBi": "最新确认笔",
+    "segmentSlope": "线段斜率",
+    "hubOverlap": "中枢重叠",
+    "multiLevelSnapshot": "多级别快照",
+    "multiLevelDesc": "1m / 5m / 15m 多周期联动",
+    "lockSync": "锁定联动",
+    "consensus": "共识：买方区间形成（弱）",
+    "watchlistTitle": "自选池",
+    "watchlistDesc": "自动扫描缠论信号",
+    "edit": "编辑",
+    "pair": "交易对",
+    "lastPrice": "最新价",
+    "signal": "信号",
+    "bias": "偏向",
+    "breakoutStrength": "突破力度",
+    "breakoutNote": "线段 3 对比 1",
+    "divergenceIndex": "背驰指数",
+    "divergenceNote": "动能减弱",
+    "hubSync": "中枢同步",
+    "hubSyncNote": "多级别对齐",
+    "biCount": "笔",
+    "segmentCount": "线段",
+    "hubCount": "中枢",
+    "trendUp": "趋势上",
+    "trendDown": "趋势下",
+    "trendConsolidation": "趋势盘整",
+    "signalMonitoring": "信号监控",
+    "signalMonitoringDesc": "实时队列与置信度",
+    "riskAndPosition": "风险与持仓",
+    "riskAndPositionDesc": "自动交易风控",
+    "position": "仓位",
+    "maxDrawdown": "最大回撤",
+    "holdingCount": "持仓数量",
+    "tradingCalendar": "交易日历",
+    "tradingCalendarDesc": "Binance 24/7 | 维护提示",
+    "maintenanceWindow": "维护窗口",
+    "fundingRate": "合约资金费",
+    "nextScan": "下次扫描",
+    "strategyLab": "策略实验室",
+    "strategyLabDesc": "分级参数化缠论规则",
+    "saveTemplate": "保存模板",
+    "runBacktest": "运行回测",
+    "parameterTuning": "参数调优",
+    "minBiK": "最小成笔K数",
+    "hubOverlapThreshold": "中枢重叠度",
+    "divergenceThreshold": "背驰阈值",
+    "hubBreakout": "中枢突破",
+    "weakDivergence": "弱背驰",
+    "segmentExhaustion": "线段衰竭"
+  },
   "settings": {
     "title": "设置",
     "subtitle": "偏好、风控、账户绑定。",
