fix(frontend): 校准设置页、图表提示、定时器清理及市场筛选
  - Settings.vue: 补齐 i18n 字段（exchange/status/apiKey/reconnect/telegram/dataSync 等）
  - ChartAnalysis: 添加"当前为示例数据"提示，避免用户误解周期切换
  - ShellLayout: 添加 onBeforeUnmount 清理定时器，防止路由切换后多重定时器
  - Markets: 顶部筛选器添加 i18n 标签和"全部"选项，真正驱动数据过滤逻辑"

--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -56,6 +56,7 @@
     "searchPlaceholder": "Search pair, e.g. BTC/USDT",
     "type": "Type",
     "interval": "Interval",
+    "all": "All",
     "spot": "Spot",
     "futures": "Futures",
     "topMovers": "Top Movers",
@@ -71,7 +72,10 @@
     "emptyText": "No matching pairs found",
     "sortByChange": "Change",
     "sortByVolume": "Volume",
-    "sortByVolatility": "Volatility"
+    "sortByVolatility": "Volatility",
+    "dataSource": "Data Source",
+    "defaultInterval": "Default Interval",
+    "contractType": "Contract Type"
   },
   "watchlist": {
     "title": "Watchlist",
@@ -178,7 +182,8 @@
     "open": "Open",
     "close": "Close",
     "low": "Low",
-    "high": "High"
+    "high": "High",
+    "demoNote": "Demo data only - interval changes don't affect chart yet"
   },
   "autoTrade": {
     "title": "Auto Trade",
@@ -351,6 +356,7 @@
     "title": "Settings",
     "subtitle": "Preferences, risk control, account binding.",
     "saveSettings": "Save Settings",
+    "saving": "Saving...",
     "language": "Language",
     "theme": "Theme",
     "darkMode": "Dark",
@@ -359,9 +365,17 @@
     "drawdownLimit": "Drawdown Limit",
     "autoReduceWeight": "Auto reduce weight on limit breach",
     "accountBinding": "Account Binding",
+    "exchange": "Exchange",
+    "status": "Status",
     "connected": "Connected",
+    "apiKey": "API Key",
+    "reconnect": "Reconnect",
     "notifications": "Notifications",
     "email": "Email",
-    "webhook": "Webhook"
+    "webhook": "Webhook",
+    "telegram": "Telegram",
+    "dataSync": "Data Sync",
+    "syncInterval": "Sync Interval",
+    "autoSync": "Auto Sync"
   }
 }
