--- a/frontend/src/i18n/locales/en-US.json
+++ b/frontend/src/i18n/locales/en-US.json
@@ -213,6 +213,7 @@
     "zhongshu": "Hub",
     "tradingPoints": "Trading Points",
     "loading": "Loading...",
+    "loadFailed": "Failed to load chart data",
     "fenxingCount": "Fractals",
     "biCount": "Strokes",
     "xianduanCount": "Segments",
@@ -224,7 +225,7 @@
     "close": "Close",
     "low": "Low",
     "high": "High",
-    "demoNote": "Demo data only - interval switch uses mock samples"
+    "demoNote": "Backend data; segments/hubs/trading points are not ready"
   },
   "autoTrade": {
     "title": "Auto Trade",
@@ -429,6 +430,18 @@
     "telegram": "Telegram",
     "dataSync": "Data Sync",
     "syncInterval": "Sync Interval",
-    "autoSync": "Auto Sync"
+    "autoSync": "Auto Sync",
+    "backfillTask": "Backfill Task",
+    "backfillTaskDesc": "Create a data backfill job for missing K-lines.",
+    "backfillSymbol": "Symbol",
+    "backfillInterval": "Interval",
+    "backfillStart": "Start Time",
+    "backfillEnd": "End Time",
+    "backfillAutoExecute": "Auto execute after creation",
+    "backfillCreate": "Create Task",
+    "backfillCreating": "Creating...",
+    "backfillCreated": "Backfill task created",
+    "backfillInvalidTime": "Start time must be before end time",
+    "backfillError": "Failed to create backfill task"
   }
 }
