feat(chan): Phase 2 完成 - 线段/中枢/买卖点全链路打通
- 修复MIN_BI_COUNT=5 (九笔规则)
- /analysis返回完整ChanResultFull
- 合并笔中枢+线段中枢
- 过滤未确认线段
- 前端完整数据转换
- 添加?lite=true轻量模式
- 修复tooltip OHLC索引

--- a/frontend/src/i18n/locales/zh-CN.json
+++ b/frontend/src/i18n/locales/zh-CN.json
@@ -225,7 +225,7 @@
     "close": "收",
     "low": "低",
     "high": "高",
-    "demoNote": "后端数据已接入，线段/中枢/买卖点暂未开放"
+    "demoNote": "实时数据由后端计算，部分标的可能无信号"
   },
   "autoTrade": {
     "title": "自动交易",
